exports[`test Button changes state when clicked 1`] = `
<button
  onClick={[Function]}>
  false
</button>
`;

exports[`test Button changes state when clicked 2`] = `
<button
  onClick={[Function]}>
  true
</button>
`;

exports[`test Button container's properties should be map to Button  1`] = `
<button
  onClick={undefined}>
  false
</button>
`;

exports[`test Button container's state should be map to Button  1`] = `
<button
  onClick={undefined}>
  true
</button>
`;
